<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/edit_back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/back"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/leave"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="60dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toRightOf="@id/edit_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_back"
        app:layout_constraintBottom_toBottomOf="@id/edit_back"
        tools:ignore="RtlHardcoded" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/edit_back"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:id="@+id/edit_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <GridLayout
                    android:id="@+id/detailsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="15dp"
                    android:columnCount="2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramPre"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/prePause"
                        style="@style/RoundedBGButtonStyle"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramPreDefault" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramStart"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/startTime"
                        style="@style/RoundedBGButtonStyle"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramStartDefault" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramEnd"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/endTime"
                        style="@style/RoundedBGButtonStyle"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramEndDefault" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramReps"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/reps"
                        style="@style/RoundedBGButtonStyle"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramRepDefault" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramInter"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/interPause"
                        style="@style/RoundedBGButtonStyle"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/paramInterDefault" />
                </GridLayout>

                <EditText
                    android:id="@+id/edit_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/edit_text_border"
                    android:gravity="top"
                    android:hint="@string/notes"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:padding="5dp"
                    android:scrollbars="vertical"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>