<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:padding="15dp">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sequences"
            android:textSize="16sp"
            android:layout_columnSpan="2" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/edit"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_props"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/delete"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/savenew"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />


        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/marks"
            android:textSize="16sp"
            android:layout_columnSpan="2" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/editmark"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_props"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/deletemark"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/savemarknew"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />


        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/editing"
            android:textSize="16sp"
            android:layout_columnSpan="2" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/setmark"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setMark"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/setbegin"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setBegin"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/setend"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setEnd"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />


        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/files_ref"
            android:textSize="16sp"
            android:layout_columnSpan="2" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/menu"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_menu"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/rename"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/deletefile"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/open"
            app:tint="?colorPrimary"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_new"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/share"
            app:tint="?colorPrimary"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export"
            android:textSize="16sp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical" />

    </GridLayout>

</ScrollView>