<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sceneView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/sceneInnerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sceneInnerEdit"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/sceneInnerEdit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/actionSave"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="@id/sceneInnerName"
        app:layout_constraintRight_toLeftOf="@id/setBeginBtn"
        app:layout_constraintTop_toTopOf="@id/sceneInnerName" />

    <ImageButton
        android:id="@+id/setBeginBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/setBegin"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/setbegin"
        app:layout_constraintBottom_toBottomOf="@id/sceneInnerName"
        app:layout_constraintRight_toLeftOf="@id/setEndBtn"
        app:layout_constraintTop_toTopOf="@id/sceneInnerName" />

    <ImageButton
        android:id="@+id/setEndBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/setEnd"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/setend"
        app:layout_constraintBottom_toBottomOf="@id/sceneInnerName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sceneInnerName" />

    <EditText
        android:id="@+id/editSceneNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_border"
        android:gravity="top"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:padding="5dp"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sceneInnerName" />

</androidx.constraintlayout.widget.ConstraintLayout>