<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/markView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/markInnerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/markInnerEdit"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/markInnerEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/time0"
        app:layout_constraintBottom_toBottomOf="@id/markInnerName"
        app:layout_constraintRight_toLeftOf="@id/setPosBtn"
        app:layout_constraintTop_toTopOf="@id/markInnerName"
        style="@style/RoundedBGButtonStyle"/>

    <ImageButton
        android:id="@+id/setPosBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/setEnd"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/setmark"
        app:layout_constraintBottom_toBottomOf="@id/markInnerName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/markInnerName" />

    <EditText
        android:id="@+id/editMarkNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/edit_text_border"
        android:gravity="top"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:padding="5dp"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/markInnerName" />

</androidx.constraintlayout.widget.ConstraintLayout>