<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/file_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        style="@android:style/TextAppearance.Medium"
        android:text="@string/home"
        android:marqueeRepeatLimit="marquee_forever"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/file_item_rename"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="?android:selectableItemBackground"/>

    <ImageButton
        android:id="@+id/file_item_rename"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="2dp"
        android:contentDescription="@string/rename"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/rename"
        android:background="?android:selectableItemBackground"
        app:layout_constraintRight_toLeftOf="@id/file_item_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/file_item_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="2dp"
        android:contentDescription="@string/delete"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/deletefile"
        android:background="?android:selectableItemBackground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>